--- a/package.json
+++ b/package.json
@@ -25,7 +25,6 @@
 		"@types/events": "^3.0.0",
 		"@types/node": "^14.11.8",
 		"events": "^3.2.0",
-		"perf_hooks": "^0.0.1",
-		"tslib": "^2.0.3"
+		"perf_hooks": "^0.0.1"
 	}
 }
