--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
 		"@types/events": "^3.0.0",
 		"@types/node": "^14.11.8",
 		"events": "^3.2.0",
+		"fs": "^0.0.1-security",
+		"path": "^0.12.7",
 		"perf_hooks": "^0.0.1"
 	}
 }
