--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "simple-scheduler-task",
-	"version": "3.0.11",
+	"version": "3.0.12",
 	"description": "Simple module for easy work with task scheduling",
 	"main": "./lib/cjs/main.js",
 	"module": "./lib/main.js",
@@ -12,6 +12,7 @@
 	},
 	"scripts": {
 		"tsc": "tsc -p tsconfig.json && tsc -p tsconfig-cjs.json",
+		"build": "tsc",
 		"test": "yarn tsc && node test.js",
 		"prepublish": "npm run tsc"
 	},
@@ -19,11 +20,11 @@
 		"lib/"
 	],
 	"devDependencies": {
+		"@types/events": "^3.0.0",
+		"@types/node": "^14.11.8",
 		"typescript": "^4.0.3"
 	},
 	"dependencies": {
-		"@types/events": "^3.0.0",
-		"@types/node": "^14.11.8",
 		"events": "^3.2.0",
 		"fs": "^0.0.1-security",
 		"path": "^0.12.7",
