--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
 		"tsc": "tsc -p tsconfig.json && tsc -p tsconfig-cjs.json",
 		"build": "tsc",
 		"test": "yarn tsc && node test.js",
-		"prepublish": "npm run tsc"
+		"docs": "jsdoc -c jsdoc.json",
+		"prepublish": "yarn build && yarn docs"
 	},
 	"files": [
 		"out/"
@@ -22,6 +23,7 @@
 	"devDependencies": {
 		"@types/events": "^3.0.0",
 		"@types/node": "^14.11.8",
+		"better-docs": "^2.3.2",
 		"typescript": "^4.0.3"
 	},
 	"dependencies": {
