--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
 	"dependencies": {
 		"events": "^3.2.0",
 		"fs": "^0.0.1-security",
+		"global": "^4.4.0",
+		"jsdoc": "^3.6.6",
 		"path": "^0.12.7",
 		"perf_hooks": "^0.0.1"
 	}
