--- a/package.json
+++ b/package.json
@@ -23,13 +23,13 @@
 		"@types/events": "^3.0.0",
 		"@types/node": "^14.11.8",
 		"better-docs": "^2.3.2",
-		"typescript": "^4.0.3"
+		"typescript": "^4.0.3",
+		"global": "^4.4.0",
+		"jsdoc": "^3.6.6"
 	},
 	"dependencies": {
 		"events": "^3.2.0",
 		"fs": "^0.0.1-security",
-		"global": "^4.4.0",
-		"jsdoc": "^3.6.6",
 		"path": "^0.12.7",
 		"perf_hooks": "^0.0.1"
 	}
