--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "simple-scheduler-task",
-	"version": "3.0.13",
+	"version": "3.1.0",
 	"description": "Simple module for easy work with task scheduling",
 	"main": "./out/cjs/main.js",
 	"module": "./out/main.js",
@@ -23,9 +23,9 @@
 		"@types/events": "^3.0.0",
 		"@types/node": "^14.11.8",
 		"better-docs": "^2.3.2",
-		"typescript": "^4.0.3",
 		"global": "^4.4.0",
-		"jsdoc": "^3.6.6"
+		"jsdoc": "^3.6.6",
+		"typescript": "^4.0.3"
 	},
 	"dependencies": {
 		"events": "^3.2.0",
