--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 	"scripts": {
 		"build": "tsc -p tsconfig.json && tsc -p tsconfig-cjs.json",
 		"test": "yarn build && node test.js",
+		"lint": "eslint ./src --ext .ts",
 		"docs": "jsdoc -c jsdoc.json",
 		"prepublish": "yarn build && yarn docs"
 	},
@@ -22,7 +23,10 @@
 	"devDependencies": {
 		"@types/events": "^3.0.0",
 		"@types/node": "^14.11.8",
+		"@typescript-eslint/eslint-plugin": "^4.15.1",
+		"@typescript-eslint/parser": "^4.15.1",
 		"better-docs": "^2.3.2",
+		"eslint": "^7.20.0",
 		"global": "^4.4.0",
 		"jsdoc": "^3.6.6",
 		"typescript": "^4.0.3"
