--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
     "lib": ["DOM", "ES6"],
     "target": "ES2019",
     "module": "ESNext",
-    "outDir": "./dist/",
+    "outDir": "./out/",
     "moduleResolution": "Node",
     "declaration": true,
     "strict": true,
