--- a/package.json
+++ b/package.json
@@ -20,6 +20,13 @@
 	"files": [
 		"dist/"
 	],
+	"keywords": [
+		"schedule",
+		"scheduler",
+		"task",
+		"job",
+		"in-memory"
+	],
 	"devDependencies": {
 		"@types/events": "^3.0.0",
 		"@types/node": "^14.11.8",
