--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
 	"author": "RusAnonym",
 	"license": "MIT",
 	"directories": {
-		"out": "dist"
+		"doc": "docs",
+		"bin": "dist",
+		"example": "example"
 	},
 	"scripts": {
 		"build": "tsc -p tsconfig.json && tsc -p tsconfig-cjs.json",
